[gd_scene load_steps=3 format=3 uid="uid://fvx6bensmp67"]

[ext_resource type="Script" path="res://Enemy/Attacks/ranged_object.gd" id="1_3dbaj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lyeq"]
size = Vector2(22, 7)

[node name="RangedObject" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_3dbaj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11, 3.5)
shape = SubResource("RectangleShape2D_6lyeq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 22.0
offset_bottom = 7.0

[node name="TimeOut" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimeOut" to="." method="_on_time_out_timeout"]
